project(14days)

#add_executable(binsearch src/binary_search.cpp)
#add_executable(firstbadversion src/first_bad_version.cpp)
#add_executable(searchinsertp src/serach_insert_position.cpp)
#add_executable(squares_of_sorted_array src/squares_of_sorted_array.cpp)
#add_executable(rotate_array src/rotate_array.cpp)
#add_executable(movezeros src/move_zeros.cpp)
#add_executable(twosum src/two_sum_input_array_sorted.cpp)
#add_executable(containsDup src/contains_duplicate.cpp)
#add_executable(containsDup src/maximum_subarray.cpp)
#add_executable(twosum src/two_sum.cpp)
add_executable(mergetwosortedarrays src/merge_two_sorted_arrays.cpp)