project(14days)

#add_executable(binsearch src/binary_search.cpp)
#add_executable(firstbadversion src/first_bad_version.cpp)
#add_executable(searchinsertp src/serach_insert_position.cpp)
#add_executable(squares_of_sorted_array src/squares_of_sorted_array.cpp)
#add_executable(rotate_array src/rotate_array.cpp)
#add_executable(movezeros src/move_zeros.cpp)
#add_executable(twosum src/two_sum_input_array_sorted.cpp)
#add_executable(containsDup src/contains_duplicate.cpp)
#add_executable(containsDup src/maximum_subarray.cpp)
#add_executable(twosum src/two_sum.cpp)
#add_executable(mergetwosortedarrays src/merge_two_sorted_arrays.cpp)
#add_executable(intersectionof_two_arrays src/intersection_of_two_arrays.cpp)
#add_executable(besttime_to_buy_n_sell src/best_time_buy_and_sell_stock.cpp)
#add_executable(reverse_string src/reverse_string.cpp)
#add_executable(reverse_words_in_a_string src/reverse_words_in_a_string.cpp)
#add_executable(middle_of_the_linkedlist src/middle_of_the_linkedlist.cpp)
#add_executable(removenth_node_eol src/remove_n_th_node_from_end_of_list.cpp)
#add_executable(longestsubstring src/longest_substring_without_repeating.cpp)
#add_executable(permutationinstring src/permulation_in_string.cpp)
#add_executable(mergebtrees src/merge_two_btree.cpp)
#add_executable(floodfill src/flood_fill.cpp)
#add_executable(maxarea src/max_area_of_island.cpp)
#add_executable(populatingnextrightpointers src/populating_next_right_pointers_in_each_node.cpp)
#add_executable(01matrix src/01_matrix.cpp)
#add_executable(rotting_oranges src/rotting_oranges.cpp)
#add_executable(mergetwosortedlist src/merge_two_sorted_list.cpp)
#add_executable(revesersellist src/reverse_linkedlist.cpp)
#add_executable(majoritylement src/malority_element.cpp)
#add_executable(isomorphicstrings src/isomorphic_strings.cpp)
#add_executable(containedupplicatesii src/contains_dupplicate_ii.cpp)
#add_executable(happybumber src/happy_number.cpp)
#add_executable(singleelement src/single_element_in_sorted_array.cpp)
#add_executable(reversebits src/reverse_bits.cpp)
#add_executable(constructbtree src/construct_btree_inorder_post_order.cpp)
add_executable(deletenodeinabst src/delete_node_in_abst.cpp)