project(arrays)

#add_executable(textjust src/text_justifications.cpp)
#add_executable(removeintervals src/remove_intervals.cpp)
#add_executable(search2dmatrix src/search_2d_matrix.cpp)
#add_executable(searchrotatedarray src/search_in_rotated_array.cpp)
#add_executable(searchrotatedarrayii src/search_in_rotated_sorted_array_ii.cpp)
#add_executable(summaryranges src/summary_ranges.cpp)
#add_executable(deletenearn src/delete_and_earn.cpp)
#add_executable(validate_stack_seq src/validate_stack_sequence.cpp)
#add_executable(minimum_domino_rotates src/minimum_domino_rotations_for_equal_row.cpp)
add_executable(thekweakestrows src/the_k_weakest_rows_in_a_matrix.cpp)