project(arrays)

#add_executable(textjust src/text_justifications.cpp)
#add_executable(removeintervals src/remove_intervals.cpp)
#add_executable(search2dmatrix src/search_2d_matrix.cpp)
#add_executable(searchrotatedarray src/search_in_rotated_array.cpp)
#add_executable(searchrotatedarrayii src/search_in_rotated_sorted_array_ii.cpp)
#add_executable(summaryranges src/summary_ranges.cpp)
#add_executable(deletenearn src/delete_and_earn.cpp)
#add_executable(validate_stack_seq src/validate_stack_sequence.cpp)
#add_executable(minimum_domino_rotates src/minimum_domino_rotations_for_equal_row.cpp)
#add_executable(thekweakestrows src/the_k_weakest_rows_in_a_matrix.cpp)
#add_executable(findtheduplicate src/find_the_duplicate.cpp)
#add_executable(next_permutation src/next_permutation.cpp)
#add_executable(thresumm src/three_sum_with_multiplicity.cpp)
#add_executable(topkfrequent_elements src/top_k_frequent_elements.cpp)
#add_executable(design_hasset src/design_hasset.cpp)
#add_executable(peekingiterator src/peeking_iterator.cpp)
#add_executable(sortbyparity src/sort_arry_by_parity.cpp)
#add_executable(shorted_unsorted_continues_subarr src/shorted_unsorted_continues_subarr.cpp)
#add_executable(max_numofpairs src/max_number_of_k_sum_pairs.cpp)
add_executable(flatten_neseted_iterator src/flatten_nested_list_iterator.cpp)