project(Contests)

#add_executable(solution src/min_amount_of.cpp)
#add_executable(solution src/smallest_number_in_set.cpp)
#add_executable(solution src/move_pieces_to_obtain_a_string.cpp)
#add_executable(solution1 src/maximum_number_of_pairs_in_array.cpp)
#add_executable(solution2 src/maximum_sum_of_.cpp)
add_executable(solution3 src/query_kth_smallest_trimed_number.cpp)