project(dp)

#add_executable(champagnetower src/champagne_tower.cpp)
#add_executable(countsorted_vowel src/count_sorted_vowel_strings.cpp)
#add_executable(network_delay_time src/network_delay_time.cpp)
#add_executable(palindromic_substring src/palindromic_substring.cpp)
#add_executable(get_maximum_in_generated_array src/get_maximun_in_generated_array.cpp)
#add_executable(jump_game_vi src/jump_game_vi.cpp)
add_executable(min_cost_climbing_stairs src/min_cost_climbing_stairs.cpp)
add_executable(house_robber src/house_robber.cpp)