project(dp)

#add_executable(champagnetower src/champagne_tower.cpp)
#add_executable(countsorted_vowel src/count_sorted_vowel_strings.cpp)
#add_executable(network_delay_time src/network_delay_time.cpp)
#add_executable(palindromic_substring src/palindromic_substring.cpp)
#add_executable(get_maximum_in_generated_array src/get_maximun_in_generated_array.cpp)
#add_executable(jump_game_vi src/jump_game_vi.cpp)
#add_executable(min_cost_climbing_stairs src/min_cost_climbing_stairs.cpp)
#add_executable(house_robber src/house_robber.cpp)
#add_executable(house_robber_ii src/house_robber_ii.cpp)
#add_executable(best_sightseeing_pair src/best_sightseeing_pair.cpp)
#add_executable(delete_and_earn src/delete_and_earn.cpp)
#add_executable(jump_game src/jump_game.cpp)
#add_executable(jumpgameii src/jump_game_ii.cpp)
#add_executable(maximum_sub_array src/maximum_sub_array.cpp)
#add_executable(out_of_bound_paths src/out_of_bound_paths.cpp)
#add_executable(maximum_sum_circular_sub_array src/maximum_sum_circular_sub_array.cpp)
#add_executable(k_inverse_pair_array src/k_inverse_pair_array.cpp)
add_executable(best_time_to_buy_i src/best_time_to_buy_i.cpp)