project(greedy)

#add_executable(broken_cal src/broken_calculator.cpp)
#add_executable(boattosavepeople src/boat_to_save_people.cpp)
#add_executable(twocityscheduling src/two_city_scheduling.cpp)
#add_executable(containerwithmostwater src/container_with_most_water.cpp)
add_executable(minimum_deletions_to_makes_character_frequencies_unique src/minimum_deletions_to_makes_character_frequencies_unique.cpp)