project(linkedlist)

#add_executable(partitionlist src/partition_list.cpp)
#add_executable(removeduplicate src/remove_duplicates.cpp)
#add_executable(sortlist src/sort_list.cpp)
#add_executable(addnumbers src/add_numbers.cpp)
#add_executable(rotatelist src/rotate_list.cpp)
add_executable(copy_list_with_random_pointer src/copy_list_with_random_pointer.cpp)