project(linkedlist)

#add_executable(partitionlist src/partition_list.cpp)
#add_executable(removeduplicate src/remove_duplicates.cpp)
#add_executable(sortlist src/sort_list.cpp)
#add_executable(addnumbers src/add_numbers.cpp)
#add_executable(rotatelist src/rotate_list.cpp)
#add_executable(copy_list_with_random_pointer src/copy_list_with_random_pointer.cpp)
#add_executable(reversell src/reverse_linked_list.cpp src/swapping_nodes_in_a_linkedlist.cpp)
#add_executable(swappingnodes src/swapping_nodes_in_a_linkedlist.cpp)
add_executable(intersection_of_two_linkedlist src/intersection_of_two_linkedlist.cpp)