project(Practice)


#add_executable(mini_moves src/minimun_moves_to_equal_array.cpp)
#add_executable(longest_consecutive_sequene src/longest_consecutive_sequene.cpp)
#add_executable(find_peak_element src/find_peak_element.cpp)
#add_executable(count_primes src/count_primes.cpp)
#add_executable(minimum_sub_array_sum src/minimum_sub_array_sum.cpp)
#add_executable(contains_duplicate_iii src/contains_duplicate_iii.cpp)
#add_executable(majority_element_ii src/majority_element_ii.cpp)
#add_executable(evaluate_reverse_polish_notation src/evaluate_reverse_polish_notation.cpp)
#add_executable(maximun_units_on_a_truck src/maximun_units_on_a_truck.cpp)
#add_executable(largest_number src/largest_number.cpp)
#add_executable(max_area_of_a_piece_of_cake src/max_area_of_a_piece_of_cacke.cpp)
#add_executable(find_missing_observations src/find_missing_observations.cpp)
add_executable(remove_one_five src/remove_one_five.cpp)