project(Practice)


#add_executable(mini_moves src/minimun_moves_to_equal_array.cpp)
#add_executable(longest_consecutive_sequene src/longest_consecutive_sequene.cpp)
#add_executable(find_peak_element src/find_peak_element.cpp)
#add_executable(count_primes src/count_primes.cpp)
#add_executable(minimum_sub_array_sum src/minimum_sub_array_sum.cpp)
#add_executable(contains_duplicate_iii src/contains_duplicate_iii.cpp)
#add_executable(majority_element_ii src/majority_element_ii.cpp)
#add_executable(evaluate_reverse_polish_notation src/evaluate_reverse_polish_notation.cpp)
#add_executable(maximun_units_on_a_truck src/maximun_units_on_a_truck.cpp)
#add_executable(largest_number src/largest_number.cpp)
#add_executable(max_area_of_a_piece_of_cake src/max_area_of_a_piece_of_cacke.cpp)
#add_executable(find_missing_observations src/find_missing_observations.cpp)
#add_executable(remove_one_five src/remove_one_five.cpp)
#add_executable(count_good_nodes_in_a_btree src/count_good_nodes_in_a_btree.cpp)
#add_executable(reverse_linkedlist_ii src/reverse_linkedlist_ii.cpp)
#add_executable(remove_digit_from_number_to_maximize_result src/remove_digit_from_number_to_maximize_result.cpp)
#add_executable(balance_paranthesis src/balance_paranthesis.cpp)
#add_executable(decode_message src/decode_message.cpp)
#add_executable(spiral_matrix_ src/spiral_matrix_.cpp)
#add_executable(winggle_sequence src/winggle_sequence.cpp)
#add_executable(rearrange_array_elements_by_sign src/rearrange_array_elements_by_sign.cpp)
#add_executable(reverse_vowels_of_a_string src/reverse_vowels_of_a_string.cpp)
add_executable(max_length_of_concatenated_string_with_unique_chars src/max_lenght_of_concatanated_string_with_unique_chars.cpp)