project(stacknqueues)

#add_executable(scoreofparantheses src/score_of_parantheses.cpp)
#add_executable(removeduplicateletters src/remove_duplicate_letters.cpp)
#add_executable(frequencystack src/frequency_stack.cpp)
#add_executable(laststone src/last_stone_weight.cpp)
#add_executable(kthlargest src/kth_largest_element.cpp)
#add_executable(baseballgame src/baseball_game.cpp)
add_executable(backspacestring_compare src/backspacestring_compare.cpp)

