project(stacknqueues)

#add_executable(scoreofparantheses src/score_of_parantheses.cpp)
#add_executable(removeduplicateletters src/remove_duplicate_letters.cpp)
#add_executable(frequencystack src/frequency_stack.cpp)
#add_executable(laststone src/last_stone_weight.cpp)
#add_executable(kthlargest src/kth_largest_element.cpp)
#add_executable(baseballgame src/baseball_game.cpp)
#add_executable(backspacestring_compare src/backspacestring_compare.cpp)
#add_executable(stack_using_queue src/stack_using_queue.cpp)
#add_executable(remove_all_adjacent_duplicates_in_string_ii src/remove_all_adjacent_duplicates_in_string_ii.cpp)
#add_executable(furthest_building_you_can_reach src/furthest_building_you_can_reach.cpp)
#add_executable(kth_largest_number_in_an_array src/kth_largest_number_in_an_array.cpp)
add_executable(construct_target_array_with_multiple_sums src/construct_target_array_with_multiple_sums.cpp)

