project(strings)

#add_executable(decodway src/decode_ways.cpp)
#add_executable(compareversions src/compare_version_numbers.cpp)
#add_executable(issubsequence src/is_subsequence.cpp)
#add_executable(minimum_remove_to_make_valid_paranthesis src/minimum_remove_to_make_valid_paranthesis.cpp)
#add_executable(smallest_string_with_a_given_neuric_values src/smallest_string_with_a_given_neumaric_values.cpp)
#add_executable(reverse_string src/reverse_string.cpp)
#add_executable(valid_palindrome_ii src/valid_palindrome_ii.cpp)
#add_executable(remove_palindromic_subsequences src/remove_palindromic_subsequences.cpp)
add_executable(delete_operations_for_two_strings src/delete_operations_for_two_strings.cpp)