project(trees)

#add_executable(maxwidth src/maximum_width_of_btree.cpp)
#add_executable(searchinabtre src/search_in_a_btree.cpp)
#add_executable(trimabtree src/trim_a_btree.cpp)
#add_executable(convertbsttogreatertree src/convert_bst_to_greater_tree.cpp)
#add_executable(increasingorder src/increasing_order_search_tree.cpp)
add_executable(kthsmallest_element src/kth_smallest_element_in_bst.cpp)