project(trees)

#add_executable(maxwidth src/maximum_width_of_btree.cpp)
#add_executable(searchinabtre src/search_in_a_btree.cpp)
#add_executable(trimabtree src/trim_a_btree.cpp)
#add_executable(convertbsttogreatertree src/convert_bst_to_greater_tree.cpp)
#add_executable(increasingorder src/increasing_order_search_tree.cpp)
#add_executable(kthsmallest_element src/kth_smallest_element_in_bst.cpp)
#add_executable(recoverbst src/recover_bst.cpp)
#add_executable(recoverbst2 src/recover_bst_2.cpp)
#add_executable(deepest_leaves_sum src/deepest_leaves_sum.cpp)
#add_executable(find_the_corresponding_node_of_a_btree_in_a_clone_that_tree
#        src/find_the_corresponding_node_of_a_btree_in_a_clone_that_tree.cpp)
#add_executable(binary_tree_right_side_view src/binary_tree_right_side_view.cpp)
#add_executable(population_next_right_pointers_in_each_node_ii src/population_next_right_pointers_in_each_node_ii.cpp)
#add_executable(binary_tree_level_order_traversal src/binary_tree_level_order_traversal.cpp)
add_executable(binary_tree_level_order_traversal_ii src/binary_tree_level_order_traversal_ii.cpp)